# lppl

./: .gitignore  README.md  TECH_DEBT_AUDIT_BEGINNER_20260404.md  WYCKOFF_QUICKSTART.md  e2e_optimization_report_20260404.md  generate_optimal8_report.py  grouped_ma_atr_optimization.py  grouped_ma_rescan_high_beta.py  index_investment_analysis.py  integrated_strategy_validation.py  lppl.py  lppl_backtest.py  lppl_backtest_report.md  lppl_verify_v2.py  lppl_walk_forward.py  ma_cross_atr_optimization.py  main.py  optimize_index_strategy.py  personal_investor_optimization.py  plan.md  pyproject.toml  pytest.ini  requirements.txt  target.md  test_lppl_ma.py  tune_signal_model.py  validate_costs_walkforward.py  validate_factor_combinations.py  validate_large_scale.py  validate_new_factors.py  validate_new_factors_final.py  validate_new_factors_v2.py  validate_new_factors_v3.py  validate_p1_p2.py  validate_wyckoff_correct.py  validate_wyckoff_v2.py  verify_lppl.py  wyckoff_analysis.py  wyckoff_fusion_40window_test.py  wyckoff_fusion_40window_test_v2.py  (+3 more)
config/: optimal_params.yaml  trading.yaml
docs/: CURRENT_SYSTEM_STATUS_20260404.md  DETAILED_IMPLEMENTATION_PLAN_WYCKOFF_20260408.md  IMPLEMENTATION_COMPLETE_REPORT.md  LOCAL_REMOTE_WYCKOFF_MERGE_PLAN_20260504.md  README.md  SPEC_WYCKOFF_FUSION_AND_STATE_20260407.md  SPEC_WYCKOFF_OUTPUT_SCHEMA_20260407.md  SPEC_WYCKOFF_RULE_ENGINE_20260407.md  SRC_CODE_REFERENCE.md  TECH_DEBT_REMEDIATION_LOG_20260404.md  lppl_signal_experiment_retro_20260329.md  ma_atr_convergence_test_plan.md  ma_atr_convergence_v2_test_plan.md  使用文档.md  (+21 more)
(+672 files in other folders)
